--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "just CV",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "author": "Alex Bu",
@@ -30,5 +30,8 @@
     "webpack": "5.76.3",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.13.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
