--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "preact-svg-loader": "^0.2.1"
   }
 }
