--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "lint": "eslint . --ext .ts,.tsx",
-    "start": "cross-env NODE_ENV=development webpack serve"
+    "test": "npm run lint",
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.56.0",
@@ -18,15 +20,19 @@
     "css-loader": "6.7.3",
     "eslint": "7.32.0",
     "eslint-config-preact": "1.3.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-preact": "0.1.0",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.3",
     "preact": "10.13.2",
     "preact-render-to-string": "6.0.0",
     "preact-svg-loader": "0.2.1",
     "sass": "1.60.0",
-    "sass-loader": "^13.2.2",
+    "sass-loader": "13.2.2",
     "style-loader": "3.3.2",
     "ts-loader": "9.4.2",
     "typescript": "5.0.2",
