--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "module": "ESNext",
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
@@ -16,6 +16,6 @@
     "strict": true,
     "baseUrl": "./src"
   },
-  "include": ["src"],
+  "include": ["src", "typings"],
   "exclude": ["node_modules", "dist", "public"]
 }
