--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack": "5.77.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.13.1"
+  },
+  "imports": {
+    "#static/*": "./static/*.*"
   }
 }
